@@ -167,3 +167,4 @@ v 2.0:
 	- Don't throw errors when attempting to remove permission attachments (bukkit will have already removed it).
 	- Remove all permission attachments when performing a manload or restart.
 	- Expand 'manwhois' to also list a users subgroups.
+	- Fix a concurrent modification error when removing all attachments.
